yoojincustard/2026-02-11: Repository의 selectAll 모두값이 없을 때 빈리스트 반환하도록 수정